objects/MaritzCX__Invitation_File_Setting__c.object
<CustomObject>
    <fields>
        <fullName>MaritzCX__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Delivery_Type__c</fullName>
        <description>Determines the survey delivery type (real time or scheduled)</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaritzCX__MCX_Company_Id__c</fullName>
        <label>MCX Company Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__MCX_Invitation_File_Settings_Id__c</fullName>
        <description>MCX Id of Invitation file setting</description>
        <externalId>true</externalId>
        <label>MCX Invitation File Settings Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaritzCX__MCX_Survey_Id__c</fullName>
        <description>Survey Id for which the Invitation file setting is applicable</description>
        <externalId>true</externalId>
        <label>MCX Survey Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Pre_pop_Fields__c</fullName>
        <description>Field to store pre-pop data based on invitation settings</description>
        <label>Pre-pop Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Survey_Attributes__c</fullName>
        <description>This field stores the mapping between MaritzCX Survey Attributes and Salesforce Contact Fields.</description>
        <label>Survey Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Invitation File Setting</label>
    <listViews>
        <fullName>MaritzCX__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invitation File Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitation File Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>